# internal/controller/controller.go
@@ -2,7 +2,7 @@ package controller
 
 import (
 	"encoding/json"
-	"errors"
+	"fmt"
 	"log"
 	"net/http"
 	"strconv"
@@ -25,11 +25,6 @@ type service interface {
 	GetScheduleWithIntake(int, int) (model.Schedule, error)
 	GetNextTakings(int) ([]model.Schedule, error)
 }
-
-var (
-    ErrInvalidUserID      = errors.New("user_id cannot be zero")
-    ErrScheduleNotFound   = errors.New("schedule not found")
-)
 
 func New(svc service, port string) *controller {
 	return &controller{service: svc, listenPort: port}
@@ -54,18 +49,20 @@ func (c *controller) Run() error {
 	return http.ListenAndServe(c.listenPort, router)
 }
 
-// @Summary Add a new schedule
+// @Summary Add a new schedule [! Предпочтительнее использовать http-клиент для post-запросов, например Postman]
 // @Description Create a new schedule for a user
 // @Accept  json
 // @Produce  json
 // @Param   schedule  body  Schedule  true  "Schedule data"
-// @Success 200 {object} Response
-// @Failure 400 {object} APIError
+// @Success 201 {object} responseScheduleID
+// @Failure 400 {object} APIError "Bad request"
+// @Failure 404 {object} APIError "Resource not found"
+// @Failure 500 {object} APIError "Internal server error"
 // @Router /schedule [post]
 func (c *controller) addSchedule(w http.ResponseWriter, r *http.Request) error {
 	schedule := &Schedule{}
 	if err := json.NewDecoder(r.Body).Decode(schedule); err != nil {
-		return err
+		return fmt.Errorf("incorrect input: %w.\ninternal error: %s", model.ErrBadRequest, err)
 	}
 
 	scheduleModel := toModelSchedule(*schedule)
@@ -74,8 +71,8 @@ func (c *controller) addSchedule(w http.ResponseWriter, r *http.Request) error {
 		return err
 	}
 
-	response := Response{Schedule_id: strconv.Itoa(scheduleID)}
-	return writeJSONtoHTTP(w, http.StatusOK, response)
+	response := responseScheduleID{Schedule_id: strconv.Itoa(scheduleID)}
+	return writeJSONtoHTTP(w, http.StatusCreated, response)
 }
 
 // @Summary Get user schedules
@@ -83,21 +80,29 @@ func (c *controller) addSchedule(w http.ResponseWriter, r *http.Request) error {
 // @Produce json
 // @Param   user_id query int true "User ID"
 // @Success 200 {array} int
-// @Failure 400 {object} APIError
+// @Success 204 "No content"
+// @Failure 400 {object} APIError "Bad request"
+// @Failure 404 {object} APIError "Resource not found"
+// @Failure 500 {object} APIError "Internal server error"
 // @Router /schedules [get]
 func (c *controller) getSchedules(w http.ResponseWriter, r *http.Request) error {
 	userID, err := strconv.Atoi(r.URL.Query().Get("user_id"))
 	if err != nil {
-		return err
+		return writeJSONtoHTTP(w, http.StatusBadRequest, fmt.Errorf("incorrect user_id: %w", err))
 	}
 	if userID == 0 {
-		return ErrInvalidUserID
+		return writeJSONtoHTTP(w, http.StatusBadRequest, fmt.Errorf("user_id can't be 0: %w", err))
 	}
 
 	response, err := c.service.GetScheduleIDs(userID)
 	if err != nil {
 		return err
 	}
+
+	if len(response) == 0 {
+		return writeJSONtoHTTP(w, http.StatusNoContent, response)
+	}
+
 	return writeJSONtoHTTP(w, http.StatusOK, response)
 }
 
@@ -106,26 +111,31 @@ func (c *controller) getSchedules(w http.ResponseWriter, r *http.Request) error 
 // @Produce json
 // @Param   user_id query int true "User ID"
 // @Param   schedule_id query int true "Schedule ID"
-// @Success 200 {object} model.Schedule
-// @Failure 404 {object} APIError
+// @Success 200 {object} Schedule
+// @Success 204 "No content"
+// @Failure 400 {object} APIError "Bad request"
+// @Failure 404 {object} APIError "Resource not found"
+// @Failure 500 {object} APIError "Internal server error"
 // @Router /schedule [get]
 func (c *controller) getSchedule(w http.ResponseWriter, r *http.Request) error {
 	userID, err := strconv.Atoi(r.URL.Query().Get("user_id"))
 	if err != nil {
-		return err
+		return writeJSONtoHTTP(w, http.StatusBadRequest, fmt.Errorf("incorrect user_id: %w", err))
 	}
 	scheduleID, err := strconv.Atoi(r.URL.Query().Get("schedule_id"))
 	if err != nil {
-		return err
+		return writeJSONtoHTTP(w, http.StatusBadRequest, fmt.Errorf("incorrect schedule_id: %w", err))
 	}
 
 	response, err := c.service.GetScheduleWithIntake(userID, scheduleID)
 	if err != nil {
-		if errors.Is(err, ErrScheduleNotFound) {
-			return writeJSONtoHTTP(w, http.StatusNotFound, APIError{Err: err.Error()})
-		}
 		return err
 	}
+
+	if response.ID == 0 {
+		return writeJSONtoHTTP(w, http.StatusNoContent, response)
+	}
+
 	return writeJSONtoHTTP(w, http.StatusOK, response)
 }
 
@@ -133,13 +143,16 @@ func (c *controller) getSchedule(w http.ResponseWriter, r *http.Request) error {
 // @Description Retrieve upcoming medication schedules for a user
 // @Produce json
 // @Param   user_id query int true "User ID"
-// @Success 200 {object} SchedulesInWindow
-// @Failure 400 {object} APIError
+// @Success 200 {object} Schedule
+// @Success 204 "No content"
+// @Failure 400 {object} APIError "Bad request"
+// @Failure 404 {object} APIError "Resource not found"
+// @Failure 500 {object} APIError "Internal server error"
 // @Router /next_takings [get]
 func (c *controller) getNextTakings(w http.ResponseWriter, r *http.Request) error {
 	userID, err := strconv.Atoi(r.URL.Query().Get("user_id"))
 	if err != nil {
-		return err
+		return writeJSONtoHTTP(w, http.StatusBadRequest, fmt.Errorf("incorrect user_id: %w", err))
 	}
 
 	schedulesRaw, err := c.service.GetNextTakings(userID)
@@ -150,6 +163,10 @@ func (c *controller) getNextTakings(w http.ResponseWriter, r *http.Request) erro
 	schedules := make([]Schedule, 0, len(schedulesRaw))
 	for _, s := range schedulesRaw {
 		schedules = append(schedules, Schedule(s))
+	}
+
+	if len(schedules) == 0 {
+		return writeJSONtoHTTP(w, http.StatusNoContent, schedules)
 	}
 
 	response := SchedulesInWindow{Schedules: schedules}
