# internal/docs/swagger.json
@@ -33,11 +33,26 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/controller.SchedulesInWindow"
+                            "$ref": "#/definitions/controller.Schedule"
                         }
                     },
+                    "204": {
+                        "description": "No content"
+                    },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/controller.APIError"
                         }
@@ -72,11 +87,26 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Schedule"
+                            "$ref": "#/definitions/controller.Schedule"
+                        }
+                    },
+                    "204": {
+                        "description": "No content"
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
                         }
                     },
                     "404": {
-                        "description": "Not Found",
+                        "description": "Resource not found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/controller.APIError"
                         }
@@ -91,7 +121,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Add a new schedule",
+                "summary": "Add a new schedule [! Предпочтительнее использовать http-клиент для post-запросов, например Postman]",
                 "parameters": [
                     {
                         "description": "Schedule data",
@@ -104,14 +134,26 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/controller.Response"
+                            "$ref": "#/definitions/controller.responseScheduleID"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/controller.APIError"
                         }
@@ -145,8 +187,23 @@
                             }
                         }
                     },
+                    "204": {
+                        "description": "No content"
+                    },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "404": {
+                        "description": "Resource not found",
+                        "schema": {
+                            "$ref": "#/definitions/controller.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/controller.APIError"
                         }
@@ -159,15 +216,7 @@
         "controller.APIError": {
             "type": "object",
             "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "controller.Response": {
-            "type": "object",
-            "properties": {
-                "schedule_id": {
+                "message": {
                     "type": "string"
                 }
             }
@@ -197,52 +246,14 @@
                     }
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
-        "controller.SchedulesInWindow": {
+        "controller.responseScheduleID": {
             "type": "object",
             "properties": {
-                "schedules": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/controller.Schedule"
-                    }
-                }
-            }
-        },
-        "model.Schedule": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "cureName": {
-                    "type": "string"
-                },
-                "dayFinish": {
-                    "type": "string"
-                },
-                "dayStart": {
-                    "type": "string"
-                },
-                "dosesPerDay": {
-                    "type": "integer"
-                },
-                "duration": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "intakes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "userID": {
+                "schedule_id": {
                     "type": "string"
                 }
             }
